--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -64,6 +64,14 @@
 			</dict>
 			<dict>
 				<key>Comment</key>
+				<string></string>
+				<key>Enabled</key>
+				<true/>
+				<key>Path</key>
+				<string>SSDT-PLUG-DRTNIA.aml</string>
+			</dict>
+			<dict>
+				<key>Comment</key>
 				<string>Add PMCR device</string>
 				<key>Enabled</key>
 				<true/>
