Updated to Ventura 13.1, OpenCore 0.8.8 and latest kexts
Updated to Ventura 13.1, OpenCore 0.8.8 and latest kexts

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1526,6 +1526,8 @@ Fixing Power Management Prebuilt</string>
 			<integer>0</integer>
 			<key>HibernateMode</key>
 			<string>None</string>
+			<key>HibernateSkipsPicker</key>
+			<true/>
 			<key>HideAuxiliary</key>
 			<false/>
 			<key>LauncherOption</key>
@@ -1854,6 +1856,12 @@ Fixing Power Management Prebuilt</string>
 			<integer>0</integer>
 			<key>KeySubsequentDelay</key>
 			<integer>1</integer>
+			<key>PointerDwellClickTimeout</key>
+			<integer>0</integer>
+			<key>PointerDwellDoubleClickTimeout</key>
+			<integer>0</integer>
+			<key>PointerDwellRadius</key>
+			<integer>0</integer>
 			<key>PointerPollMask</key>
 			<integer>-1</integer>
 			<key>PointerPollMin</key>
